- Fixed logback configurations to properly utilize inclusion. - Added Home Spring Controller, view, and static content. - Added initial unit and functional testing Maven + Spring configurations.