@@ -24,11 +24,41 @@
         <!-- Project properties -->
         <project.basedir>${project.basedir}</project.basedir>
         <!-- Project build properties -->
-        <project.build.assemblyDirectory>${project.basedir}/src/assembly</project.build.assemblyDirectory>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Project build assembly properties -->
+        <project.build.assemblyDirectory>${project.basedir}/src/assembly</project.build.assemblyDirectory>
+        <!-- Project build resources properties -->
         <project.build.resourcesDirectory>${project.basedir}/src/main/resources</project.build.resourcesDirectory>
+        <!-- Project build test resources properties -->
         <project.build.testResourcesDirectory>${project.basedir}/src/test/resources</project.build.testResourcesDirectory>
+        <!-- Project build test script source properties -->
         <project.build.testScriptSourceDirectory>${project.basedir}/src/test/scripts</project.build.testScriptSourceDirectory>
+        <!-- Project build webapp source properties -->
+        <project.build.webappSourceDirectory>${project.basedir}/src/main/webapp</project.build.webappSourceDirectory>
+        <project.build.webappMetaInfSourceDirectory>${project.build.webappSourceDirectory}/META-INF</project.build.webappMetaInfSourceDirectory>
+        <project.build.webappWebInfSourceDirectory>${project.build.webappSourceDirectory}/WEB-INF</project.build.webappWebInfSourceDirectory>
+        <project.build.webappClassesSourceDirectory>${project.build.webappWebInfSourceDirectory}/classes</project.build.webappClassesSourceDirectory>
+        <project.build.webappLibSourceDirectory>${project.build.webappWebInfSourceDirectory}/lib</project.build.webappLibSourceDirectory>
+        <!-- Project build test webapp source properties -->
+        <project.build.testWebappSourceDirectory>${project.basedir}/src/test/webapp</project.build.testWebappSourceDirectory>
+        <project.build.testWebappMetaInfSourceDirectory>${project.build.testWebappSourceDirectory}/META-INF</project.build.testWebappMetaInfSourceDirectory>
+        <project.build.testWebappWebInfSourceDirectory>${project.build.testWebappSourceDirectory}/WEB-INF</project.build.testWebappWebInfSourceDirectory>
+        <project.build.testWebappClassesSourceDirectory>${project.build.testWebappWebInfSourceDirectory}/classes</project.build.testWebappClassesSourceDirectory>
+        <project.build.testWebappLibSourceDirectory>${project.build.testWebappWebInfSourceDirectory}/lib</project.build.testWebappLibSourceDirectory>
+        <!-- Project build webapp properties -->
+        <project.build.webappDirectory>${project.build.directory}/${project.artifactId}</project.build.webappDirectory>
+        <project.build.webappMetaInfDirectory>${project.build.webappDirectory}/META-INF</project.build.webappMetaInfDirectory>
+        <project.build.webappWebInfDirectory>${project.build.webappDirectory}/WEB-INF</project.build.webappWebInfDirectory>
+        <project.build.webappClassesDirectory>${project.build.webappWebInfDirectory}/classes</project.build.webappClassesDirectory>
+        <project.build.webappLibDirectory>${project.build.webappWebInfDirectory}/lib</project.build.webappLibDirectory>
+        <!-- Project build test webapp properties -->
+        <project.build.testWebappDirectory>${project.build.webappDirectory}-test</project.build.testWebappDirectory>
+        <project.build.testWebappMetaInfDirectory>${project.build.testWebappDirectory}/META-INF</project.build.testWebappMetaInfDirectory>
+        <project.build.testWebappWebInfDirectory>${project.build.testWebappDirectory}/WEB-INF</project.build.testWebappWebInfDirectory>
+        <project.build.testWebappClassesDirectory>${project.build.testWebappWebInfDirectory}/classes</project.build.testWebappClassesDirectory>
+        <project.build.testWebappLibDirectory>${project.build.testWebappWebInfDirectory}/lib</project.build.testWebappLibDirectory>
+        <!-- Project Java properties -->
+        <project.java.package>${project.groupId}</project.java.package>
     </properties>
     
     <distributionManagement>
@@ -128,17 +158,6 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>javax.servlet.jsp.jstl</groupId>
-                <artifactId>jstl-api</artifactId>
-                <version>1.2</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>javax.servlet</groupId>
-                        <artifactId>servlet-api</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>1.3.2</version>
@@ -167,6 +186,21 @@
                 <groupId>org.fusesource.jansi</groupId>
                 <artifactId>jansi</artifactId>
                 <version>1.11</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.web</groupId>
+                <artifactId>javax.servlet.jsp.jstl</artifactId>
+                <version>1.2.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>servlet-api</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.servlet.jsp</groupId>
+                        <artifactId>jsp-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.logback-extensions</groupId>
@@ -274,7 +308,7 @@
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
-                <version>6.8.1</version>
+                <version>6.8.7</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -484,12 +518,111 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.16</version>
+                    <inherited>true</inherited>
+                    <configuration combine.children="merge">
+                        <argLine>-XX:PermSize=64m -XX:MaxPermSize=128m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled</argLine>
+                        <systemPropertyVariables>
+                            <dcdt.log.context.name>${project.artifactId}-test</dcdt.log.context.name>
+                            <dcdt.log.dir>${project.build.directory}/surefire-logs</dcdt.log.dir>
+                            <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                            <logback.configurationFile>${project.logback.config.file}</logback.configurationFile>
+                        </systemPropertyVariables>
+                        <trimStackTrace>false</trimStackTrace>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>default-test</id>
+                            <phase>none</phase>
+                            <inherited>true</inherited>
+                        </execution>
+                        <execution>
+                            <id>test-unit</id>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                            <inherited>true</inherited>
+                            <configuration>
+                                <includes>
+                                    <include>${project.java.package.path}/**/*UnitTests.java</include>
+                                </includes>
+                                <properties>
+                                    <property>
+                                        <name>suitename</name>
+                                        <value>${project.name} Unit Tests Suite</value>
+                                    </property>
+                                    <property>
+                                        <name>testname</name>
+                                        <value>${project.name} Unit Tests</value>
+                                    </property>
+                                </properties>
+                                <reportNameSuffix>unit</reportNameSuffix>
+                                <systemPropertyVariables>
+                                    <dcdt.log.file.name>${project.artifactId}-test-unit</dcdt.log.file.name>
+                                </systemPropertyVariables>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>test-functional</id>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                            <inherited>true</inherited>
+                            <configuration>
+                                <includes>
+                                    <include>${project.java.package.path}/**/*FunctionalTests.java</include>
+                                </includes>
+                                <properties>
+                                    <property>
+                                        <name>suitename</name>
+                                        <value>${project.name} Functional Tests Suite</value>
+                                    </property>
+                                    <property>
+                                        <name>testname</name>
+                                        <value>${project.name} Functional Tests</value>
+                                    </property>
+                                </properties>
+                                <reportNameSuffix>func</reportNameSuffix>
+                                <systemPropertyVariables>
+                                    <dcdt.log.file.name>${project.artifactId}-test-func</dcdt.log.file.name>
+                                </systemPropertyVariables>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>2.3</version>
                     <inherited>true</inherited>
                     <configuration combine.children="merge">
                         <archiveClasses>true</archiveClasses>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>default-war</id>
+                            <inherited>true</inherited>
+                            <configuration>
+                                <warSourceDirectory>${project.build.webappSourceDirectory}</warSourceDirectory>
+                                <warSourceExcludes>WEB-INF/classes/**/*.conf,WEB-INF/classes/**/*.properties,WEB-INF/classes/**/*.xml,WEB-INF/logback/**/*.xml,WEB-INF/spring/**/*.xml,WEB-INF/web.xml</warSourceExcludes>
+                                <webappDirectory>${project.build.webappDirectory}</webappDirectory>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>war-test</id>
+                            <goals>
+                                <goal>war</goal>
+                            </goals>
+                            <inherited>true</inherited>
+                            <configuration>
+                                <classifier>test</classifier>
+                                <primaryArtifact>false</primaryArtifact>
+                                <warSourceDirectory>${project.build.webappDirectory}</warSourceDirectory>
+                                <webappDirectory>${project.build.testWebappDirectory}</webappDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.tomcat.maven</groupId>
@@ -519,7 +652,7 @@
                     <version>2.0.1</version>
                     <inherited>true</inherited>
                     <executions>
-                        <!-- Reading Maven POM properties files -->
+                        <!-- Reading Maven project POM properties files -->
                         <execution>
                             <id>read-pom-properties</id>
                             <phase>initialize</phase>
@@ -532,6 +665,20 @@
                                     <location>${project.basedir}/${project.parent.relativePath}/pom.properties</location>
                                     <location>${project.basedir}/pom.properties</location>
                                 </locations>
+                            </configuration>
+                        </execution>
+                        <!-- Translating Maven project POM properties -->
+                        <execution>
+                            <id>translate-pom-properties</id>
+                            <phase>initialize</phase>
+                            <goals>
+                                <goal>translate-properties</goal>
+                            </goals>
+                            <inherited>true</inherited>
+                            <configuration combine.children="merge">
+                                <properties>
+                                    <property>project.java.package</property>
+                                </properties>
                             </configuration>
                         </execution>
                     </executions>
